--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.0",
     "tslib": "^2.3.0",
     "zod": "^3.25.56",
     "zone.js": "~0.15.0"
