--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -16,7 +16,8 @@
     "jszip": "^3.10.1",
     "pdfmake": "^0.2.20",
     "sweetalert2": "^11.22.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.10",
