--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -14,6 +14,7 @@
     "datatables.net-buttons-dt": "^3.2.3",
     "datatables.net-dt": "^2.3.2",
     "jszip": "^3.10.1",
+    "leaflet": "^1.9.4",
     "pdfmake": "^0.2.20",
     "sweetalert2": "^11.22.0",
     "vue": "^3.5.13",
