--- a/package.json
+++ b/package.json
@@ -6,19 +6,28 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "migrate": "node migrate.js",
+    "start": "npm run build && node index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "datatables.net": "^2.3.2",
     "datatables.net-buttons": "^3.2.3",
     "datatables.net-buttons-dt": "^3.2.3",
     "datatables.net-dt": "^2.3.2",
+    "dotenv": "^17.0.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "leaflet": "^1.9.4",
+    "multer": "^2.0.1",
+    "mysql2": "^3.14.1",
     "pdfmake": "^0.2.20",
     "sweetalert2": "^11.22.0",
     "vue": "^3.5.13",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.10",
