--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ PORT=3000
 DB_PORT=3306
 DB_HOST=localhost
 DB_USERNAME=root
-DB_PASSWORD=$0p0rt3
-DB_DATABASE=interfaces
+DB_PASSWORD=mysonqly
+DB_DATABASE=escuela
 SALT_ROUNDS=10
 SECRET_JWT_KEY="ASDJSAIJDIASJDJASIDHAHAGYGY545454"
