--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "leaflet": "^1.9.4",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
+    "node-fetch": "^3.3.2",
     "pdfmake": "^0.2.20",
     "sweetalert2": "^11.22.0",
     "vue": "^3.5.13",
